# r2prolog

./: .gitignore  CMakeLists.txt  LICENSE  r2util.pl  r2wp.pl
lib/xsb/: Makefile  xsb_config.h  xsb_debug.h
src/: .ycm_extra_conf.py  R2Utils.h  core_r2prolog.cpp  core_r2prolog.h  prolog.cpp  prolog.h  scope.hpp
src/xsb/: prolog.cpp  prolog.hpp  prologimpl.cpp  prologimpl.hpp  util.hpp  xsb.cpp  xsb.hpp  xsb_types.hpp
